added div to hold json data

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <div class="container">
+        <h2>Fetched JSON Data</h2>
+        <div id="dataDisplay">Loading...</div> <!-- This div will show the JSON data -->
+    </div>
+    <hr/>
+    <div class="container">
         <h2 id="title">Login</h2>
         <div id="loginForm">
             <input type="text" id="username" placeholder="Username" required>
