--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
         <p id="message"></p>
     </div>
     <script src="script.js"></script>
+    <script src="loadJsonData.js"></script>
 </body>
 </html>
