--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="course-container"></div>
     <div class="container">
         <h2>Fetched JSON Data</h2>
         <div id="dataDisplay">Loading...</div> <!-- This div will show the JSON data -->
