--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="course-container"></div>
     <div class="container">
         <h2>Fetched JSON Data</h2>
+        <div id="mediaContainerWrapper"></div>
         <div id="dataDisplay">Loading...</div> <!-- This div will show the JSON data -->
     </div>
     <hr/>
