--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <div id="course-container"></div>
     <div class="container">
         <h2>Fetched JSON Data</h2>
-        <div id="mediaContainerWrapper"></div>
+        <div id="mediaContainerWrapper">
+            <img src="https://drive.google.com/uc?export=view&id=1jCWhs8wjwJYzuWGp8GD9Y42IXmnCnwoD" width="200px" height="200px">
+        </div>
         <div id="dataDisplay">Loading...</div> <!-- This div will show the JSON data -->
     </div>
     <hr/>
