--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div class="container">
         <h2>Fetched JSON Data</h2>
         <div id="mediaContainerWrapper">
-            <img src="https://drive.google.com/uc?export=view&id=1jCWhs8wjwJYzuWGp8GD9Y42IXmnCnwoD" width="200px" height="200px">
+            <img src="https://drive.usercontent.google.com/download?id=1jCWhs8wjwJYzuWGp8GD9Y42IXmnCnwoD&export=view&authuser=0" width="200px" height="200px">
+<!--             <img src="https://drive.google.com/uc?export=view&id=1jCWhs8wjwJYzuWGp8GD9Y42IXmnCnwoD" width="200px" height="200px"> -->
         </div>
         <div id="dataDisplay">Loading...</div> <!-- This div will show the JSON data -->
     </div>
